# cmake_tutorial

./: README.md
MyLibraries/: CMakeLists.txt
MyLibraries/cmake/: MyLibrariesConfig.cmake
MyLibraries/include/MyLibraries/: my_library_a.hpp
MyLibraries/src/: my_library_a.cpp
SomeLibraries/: CMakeLists.txt
SomeLibraries/cmake/: SomeLibrariesConfig.cmake
SomeLibraries/include/SomeLibraries/: some_library_a.hpp
SomeLibraries/src/: some_library_a.cpp
app/: CMakeLists.txt
app/src/: main.cpp
my_libraries/: CMakeLists.txt
my_libraries/include/my_libraries/: my_library_a.hpp
my_libraries/src/: my_library_a.cpp
some_libraries/: CMakeLists.txt
some_libraries/include/some_libraries/: some_library_b.hpp
some_libraries/src/: some_library_a.cpp  some_library_b.cpp
